add synchronization info